Causeview Package Complete/ant script/retrieveUnpackaged/objects/Benefit__c.object
<CustomObject>
    <description>Captures benefits related to event levels and membership levels</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Defines if benefit is currently available for use</description>
        <inlineHelpText>Defines if benefit is currently available for use</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Code__c</fullName>
        <description>Unique Benefit Code</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Benefit Code</inlineHelpText>
        <label>Benefit Code</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <description>Define type of benefit</description>
        <label>Benefit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary Membership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complimentary Tickets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefit_Value__c</fullName>
        <description>Defines the benefit value - non taxable</description>
        <inlineHelpText>Defines the benefit value - non taxable</inlineHelpText>
        <label>Benefit Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <description>Full description of benefit</description>
        <label>Full Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quantity_Issued__c</fullName>
        <description>Total number issued via transactions.  Sum of all transactions related to benefit.</description>
        <inlineHelpText>Total number issued via transactions.  Sum of all transactions related to benefit.</inlineHelpText>
        <label>Quantity Issued</label>
        <summarizedField>Transaction_Benefit__c.Benefit_Quantity__c</summarizedField>
        <summaryForeignKey>Transaction_Benefit__c.Benefit__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Remaining__c</fullName>
        <description>Quantity available.  Quantity Start - Quantity Sold.</description>
        <formula>Quantity_Start__c -  Quantity_Issued__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Quantity available.  Quantity Start - Quantity Sold.</inlineHelpText>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Start__c</fullName>
        <description>If applicable: define the quantity of benefit on hand</description>
        <inlineHelpText>If applicable: define the quantity of benefit on hand</inlineHelpText>
        <label>Quantity Start</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Brief description of benefit</description>
        <inlineHelpText>Brief description of benefit (max of 255 character)</inlineHelpText>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <label>Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Benefit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>